# sap_rfc

./: .dockerignore  .gitignore  .json  Dockerfile  docker-compose.yml  pyproject.toml  test_connection.py
app/: main.py  shemas.py
app/core/: config.py  rfc_config.py
app/utils/: response.py  sap_connect_pool.py
