[project]
name = "sap-rfc"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyrfc",
    "uvicorn==0.50.2",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.uv.sources]
pyrfc = { git = "https://github.com/SAP/PyRFC.git" }
